--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,19 @@
     <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg?v8=qAJ44G5Bm7" color="#885bd5">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico?v8=qAJ44G5Bm7">
     <meta name="msapplication-TileColor" content="#603cba">
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#6c63ff" />
     <meta
       name="Ajay Upreti Portfolio"
-      content="Web site created using create-react-app"
+      content="Ajay Upreti Portfolio"
     />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png?v8=qAJ44G5Bm7">
-    <meta property="og:title" content="Ajay Upreti Portfolio" />
+    <meta name="title" property="og:title" content="Ajay Upreti Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://developerfolio.js.org/" />
-    <meta property="og:image" content="https://developerfolio.js.org/static/media/developerActivity.59389695.svg" />
+    <meta property="og:url" content="https://ajayupreti.github.io/portfolio/" />
+    <meta name="image" property="og:image" content="https://user-images.githubusercontent.com/28973795/127001466-e6b3f98c-9dbf-4527-ade4-4e26303d19bf.png" />
+    <meta name="description" property="og:description" content="Personal Portfolio" />
+    <meta name="author" content="Ajay Upreti" />
     <link rel=preload href="/static/media/Montserrat-Regular.ee653992.ttf" as="font" type="font/woff" crossorigin>
     <link rel=preload href="/static/media/Agustina.21f233e1.woff" as="font" type="font/woff" crossorigin>
 	<!--
@@ -37,31 +38,10 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.13.0/css/all.min.css">
-
-
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>Ajay Upreti Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
