--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <meta name="title" property="og:title" content="Ajay Upreti Portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ajayupreti.github.io/portfolio/" />
-    <meta name="image" property="og:image" content="https://drive.google.com/file/d/14UV191Sttd072EGrq0xSehzQIfybcqYH/view?usp=sharing" />
+    <meta name="image" property="og:image" content="https://live.staticflickr.com/65535/51336740443_4b8aea99ca_z.jpg" />
     <meta name="description" property="og:description" content="Personal Portfolio" />
     <meta name="author" content="Ajay Upreti" />
     <link rel=preload href="/static/media/Montserrat-Regular.ee653992.ttf" as="font" type="font/woff" crossorigin>
